Add config files and IdP version switch